@@ -1,85 +1,92 @@
 package com.ejdev.securitylab.security.jwt;
 
-import io.jsonwebtoken.*;
-import io.jsonwebtoken.security.Keys;
+
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.oauth2.jwt.*;
 import org.springframework.stereotype.Service;
 
-import javax.crypto.SecretKey;
-import java.nio.charset.StandardCharsets;
-import java.util.*;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
-
 @Service
+@RequiredArgsConstructor
 public class JwtService {
 
-    private final SecretKey secretKey;
-    private final long accessTokenExpirationMs;
+    private final JwtEncoder jwtEncoder;
+    private final JwtDecoder jwtDecoder;
 
-    public JwtService(
-            @Value("${security.jwt.secret}") String secret,
-            @Value("${security.jwt.access-token-expiration-ms}") long accessTokenExpirationMs
-    ) {
-        this.secretKey = Keys.hmacShaKeyFor(secret.getBytes(StandardCharsets.UTF_8));
-        this.accessTokenExpirationMs = accessTokenExpirationMs;
-    }
+    // Access token süresi (örnek: 15 dk)
+    private final Duration ACCESS_TOKEN_TTL = Duration.ofMinutes(15);
+
+    private final String ISSUER = "security-lab";
 
     public String generateAccessToken(Authentication authentication) {
-        Date now = new Date();
-        Date expiry = new Date(now.getTime() + accessTokenExpirationMs);
-
         String username = authentication.getName();
+
         List<String> roles = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
-        Map<String, Object> claims = new HashMap<>();
-        claims.put("roles", roles);
-        claims.put("type", "access");
-
-        return Jwts.builder()
-                .setSubject(username)
-                .addClaims(claims)
-                .setIssuedAt(now)
-                .setExpiration(expiry)
-                .signWith(secretKey, SignatureAlgorithm.HS256)
-                .compact();
+        return buildToken(username, roles, Map.of("type", "access"), ACCESS_TOKEN_TTL);
     }
 
-    public boolean isTokenValid(String token) {
-        try {
-            parseClaims(token);
-            return true;
-        } catch (JwtException | IllegalArgumentException e) {
-            return false;
-        }
+    public String generateAccessToken(UserDetails userDetails) {
+        List<String> roles = userDetails.getAuthorities().stream()
+                .map(GrantedAuthority::getAuthority)
+                .toList();
+
+        return buildToken(userDetails.getUsername(), roles, Map.of("type", "access"), ACCESS_TOKEN_TTL);
+    }
+
+    private String buildToken(String subject,
+                              List<String> roles,
+                              Map<String, Object> extraClaims,
+                              Duration ttl) {
+
+        Instant now = Instant.now();
+        Instant expiresAt = now.plus(ttl);
+
+        JwtClaimsSet.Builder claims = JwtClaimsSet.builder()
+                .issuer(ISSUER)
+                .issuedAt(now)
+                .expiresAt(expiresAt)
+                .subject(subject)
+                .claim("roles", roles);
+
+        extraClaims.forEach(claims::claim);
+
+        JwsHeader jwsHeader = JwsHeader.with(() -> "RS256").build();
+
+        return jwtEncoder.encode(
+                JwtEncoderParameters.from(jwsHeader, claims.build())
+        ).getTokenValue();
     }
 
     public String extractUsername(String token) {
-        return parseClaims(token).getSubject();
+        return jwtDecoder.decode(token).getSubject();
     }
 
-    @SuppressWarnings("unchecked")
     public List<String> extractRoles(String token) {
-        Claims claims = parseClaims(token);
-        Object roles = claims.get("roles");
-        if (roles instanceof List<?>) {
-            return ((List<?>) roles).stream()
-                    .map(Object::toString)
-                    .collect(Collectors.toList());
+        Jwt jwt = jwtDecoder.decode(token);
+        Object roles = jwt.getClaims().get("roles");
+        if (roles instanceof List<?> list) {
+            return list.stream().map(Object::toString).collect(Collectors.toList());
         }
         return List.of();
     }
 
-    private Claims parseClaims(String token) {
-        return Jwts.parserBuilder()
-                .setSigningKey(secretKey)
-                .build()
-                .parseClaimsJws(token)
-                .getBody();
+    public boolean isTokenValid(String token) {
+        try {
+            jwtDecoder.decode(token);
+            return true;
+        } catch (JwtException ex) {
+            return false;
+        }
     }
 }
